[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "cjm-fasthtml-viewport-fit"
dynamic = ["version"]
description = "Reusable viewport height measurement utility for FastHTML applications that dynamically fits element height to remaining viewport space with resize and HTMX integration."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [{name = "Christian J. Mills", email = "9126128+cj-mills@users.noreply.github.com"}]
keywords = ['nbdev', 'jupyter', 'notebook', 'python']
classifiers = ["Natural Language :: English", "Intended Audience :: Developers", "Development Status :: 3 - Alpha", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3 :: Only"]
dependencies = ['python-fasthtml']

[project.urls]
Repository = "https://github.com/cj-mills/cjm-fasthtml-viewport-fit"
Documentation = "https://cj-mills.github.io/cjm-fasthtml-viewport-fit"

[project.entry-points.nbdev]
cjm_fasthtml_viewport_fit = "cjm_fasthtml_viewport_fit._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "cjm_fasthtml_viewport_fit.__version__"}

[tool.setuptools.packages.find]
include = ["cjm_fasthtml_viewport_fit"]

[tool.nbdev]
